web/jsonview: fix whitespace

--- a/web/src/ui/util/JSONView.css
+++ b/web/src/ui/util/JSONView.css
@@ -1,5 +1,5 @@
 pre.json-view {
-	white-space: wrap;
+	white-space: pre-wrap;
 	overflow-wrap: anywhere;
 	margin: 0;
 
